--- a/nosotros.html
+++ b/nosotros.html
@@ -22,35 +22,69 @@
         Aparece cuando tus clientes estén buscando o navegando en la red de búsqueda, YouTube, en la web y en redes sociales.
         Te ayudamos a vender por internet a través de las más recientes estrategias digitales.
     </pre></h3>
-    <p>
+    <!-- <p>
         Somos una agencia dedicada ayudar a emprendimientos y empresas a conectar con su público, otorgando herreamientas y capacitaciones para iniciar en el mercado virtual.
         Nuestra misión es acercar los negocios al mercado virtual, dándoles la oportunidad de crecer y desarrollarse en el mundo informático.
-        Impulsamos a nuestros clientes a desarrollar un plan de trabajo factible estableciendo objetivos de corto y mediano plazo, a través de la toma de decisiones estratégicas
-        apostando por una espiral positiva de experiencia, innovación, creatividad, respaldo de seguridad y proactividad.
-    </p>
+        Impulsamos a nuestros clientes a desarrollar un plan de trabajo factible estableciendo objetivos de corto y mediano plazo, a través de la toma de decisiones estratégicas.
+    </p> -->
     <table>
         <tr>
             <th>
-                <img src="./img/JCG.jfif" alt="Juan Carlos Gomez" height="70%" width="70%">
+                <h1>Sobre nosotros</h1>
             </th>
+            <th>
+                <h1>En qué nos destacamos</h1>
+            </th>
+        </tr>
+        <tr>
             <td>
-                Con más de 20 años trabajando con abogados y con su propio software desarrollado,
-                hoy se enfoca en la gestión de diversos estudios jurídicos con la implementación del sistema Lex Doctor,
-                asegurando un sistema de trabajo que se basa en el respaldo de la acción comercial de cada despacho, sin correr riesgos, de manera segura, productiva y rentable.
+                <pre class="body">
+                Somos una agencia dedicada ayudar a emprendimientos y empresas
+                a conectar con su público, otorgando herreamientas y capacitaciones
+                para iniciar en el mercado virtual.
+                Nuestra misión es acercar los negocios al mercado virtual,
+                dándoles la oportunidad de crecer y desarrollarse en el mundo informático.
+                Impulsamos a nuestros clientes a desarrollar un plan de 
+                trabajo factible estableciendo objetivos de corto y mediano plazo,
+                a través de la toma de decisiones estratégicas.
+                </pre>
+            </td>
+            <td>
+                <ul class="body">
+                    <li>Experiencia</li>
+                    <li>Innovación</li>
+                    <li>Creatividad</li>
+                    <li>Respaldo de seguridad</li>
+                    <li>Proactividad</li>
+                    <li>Confiabilidad</li>
+                </ul>
             </td>
         </tr>
     </table>
     <table>
         <tr>
-            <td>
-                Con 10 años de antigüedad en el uso de redes sociales, el diseño y las publicidades online
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sed provident tempore asperiores beatae nisi sit cum officia amet maxime nobis nemo, maiores similique est quibusdam quo excepturi reprehenderit et.
-                Eligendi enim voluptates, exercitationem mollitia laudantium excepturi dolor nostrum ex, dignissimos, et aliquid! Fugit exercitationem ratione adipisci optio accusamus. Voluptas quibusdam fuga mollitia aspernatur delectus ab quo magni, corrupti impedit?
-                Excepturi incidunt reiciendis quasi. Odit consectetur aut nihil a ab fuga, dignissimos officia, minus reprehenderit modi doloribus accusantium ipsam, repellat fugiat unde suscipit excepturi! Quisquam tenetur minima temporibus in recusandae?
-            </td>
-            <td>
-                <img src="./img/User.png" alt="Maria Isabel Hahn" height="50%" width="50%">
-            </td>
+            <th>
+                <img src="./img/JCG.jfif" alt="Juan Carlos Gomez" height="70%" width="70%">
+            </th>
+            <th>
+                <img src="./img/MIH.JPG" alt="Maria Isabel Hahn" height="50%" width="50%">
+            </th>
+        </tr>
+        <tr>
+            <th>
+                Juan Carlos Gomez
+            </th>
+            <th>
+                Maria Isabel Hahn
+            </th>
+        </tr>
+        <tr>
+            <th>
+                Gerente Comercial
+            </th>
+            <th>
+                Gerente de Diseño
+            </th>
         </tr>
     </table>
     <table class="footer" id="contacto">
