--- a/productos.html
+++ b/productos.html
@@ -12,8 +12,8 @@
         <tr>
             <th><img src="./img/logoAgencia.png"></th>
             <th><h3><a href="./index.html">Inicio</a></h3></th>
-            <th><h3><a href="./productos.html">Productos</a></h3></th>
-            <th><h3><a href="#">Nosotros</a></h3></th>
+            <th><h3><a href="#">Productos</a></h3></th>
+            <th><h3><a href="./nosotros.html">Nosotros</a></h3></th>
             <th><h3><a href="#contacto">Contacto</a></h3></th>
         </tr>
     </table>
